--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>index</title>
-</head>
-<body>
+<html lang="es">
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<head>
+  <meta charset="UTF-8">
+ <meta name="viewport" content=widht-device-width, user-scalable-no,initial-scale=1, maximum-scale=1, minimum-scale=1">
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <video src="Mi película33.mp4" autoplay loop poster="canteras_romanas3.jpg">
+
+</video>
+ 
+
 
 </body>
+
 </html>
