--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <video src="Mi película33.mp4" autoplay loop poster="canteras_romanas3.jpg">
+  <video src="Mi película33.mp4" autoplay loop poster="Canteras_romanas3.jpg">
 
 </video>
  
