--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
- <meta name="viewport" content=widht-device-width, user-scalable-no,initial-scale=1, maximum-scale=1, minimum-scale=1">
+ <meta name="viewport" content="widht-device-width, user-scalable-no,initial-scale=1, maximum-scale=1, minimum-scale=1">
 <link rel="stylesheet" href="styles.css">
 </head>
 
