--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <meta charset="UTF-8">
- <meta name="viewport" content="widht=device-width, user-scalable-no,initial-scale=1, maximum-scale=1, minimum-scale=1">
+ <meta name="viewport" content="widht=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <video src="Mi película33.mp4" autoplay loop poster="Canteras_romanas3.jpg">
+  <video src="Mi película33.mp4" autoplay loop>
 
 </video>
  
