--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="widht=device-width", "user-scalable=no", "initial-scale=1", "maximum-scale=1", "minimum-scale=1">
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <video src="fondo.mp4" autoplay loop>
+  <video id="backgroundvideo" muted autoplay loop>
+  <video src="fondo.mp4" type="video/mp4">
 
 </video>
  
