--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+	<head>
+		<title>video de fondo</title>
+  		<meta charset="UTF-8">
+ 		<meta name="viewport" content="widht=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="styles.css">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="widht=device-width", "user-scalable=no", "initial-scale=1", "maximum-scale=1", "minimum-scale=1">
-<link rel="stylesheet" href="styles.css">
-</head>
+	<body>
+	 <header class="cabezote">
+		<div class="top">
+			<div class="contenedor">
+				<div class="logo">
+					<h1>Somos <span>Albiar</span></h1>
+				</div>
+				<nav class="bmenu">
+					<ul>
+						<li><a href="#">home</a></li>
+						<li><a href="#">nosotros</a></li>
+						<li><a href="#">servicios</a></li>
+						<li><a href="#">contactos</a></li>
+					</ul>
+			</div>
+		</div>
+	<div class="caja-video"> 
+  	<video autoplay mute loop poster="Canteras_romanas3.jpg">
+	<source src="snow.mp4">
+	</video>
+	</div>
+<div class="caja-info"> 
+  	<h2>TE AMO</h2>
+	<h3>esto solo acaba de empezar mi vida</h3>
+	</video>
+	</div>
+ 	
 
-<body>
-  <video id="backgroundvideo" muted autoplay loop>
-  <video src="fondo.mp4" type="video/mp4">
-
-</video>
- 
-
-
+</header>
+<section class="info">
+</section>
 </body>
 
 </html>
