--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 	<div class="caja-video"> 
-  	<video autoplay mute loop poster="Canteras_romanas3.jpg">
+  	<video muted autoplay loop poster="Canteras_romanas3.jpg">
 	<source src="webm.mp4">
 	</video>
 	</div>
