--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
 </header>
 <section class="info">
- <img src="cesped.jpg">
+	<img src="foto1.jpg">
+	<img src="foto2.jpg">
+	<img src="foto3.png">
 </section>
 </body>
 
