--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	<h2>TE AMO</h2>
 	<h3>esto solo acaba de empezar mi vida</h3>
 	</video>
-		 <img src="guillermo.png">
+		 <img src="guillermo.png" width="50" height="60">
 	</div>
  	
 
