--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
   	<h2>TE AMO</h2>
 	<h3>esto solo acaba de empezar mi vida</h3>
 	</video>
-		 <img src="guillermo.png" width="200" height="180">
+		 <img src="guillermo.png" width="200" height="190">
+		 <img src="ana.png" width="200" height="190">
+		 <img src="mariola.png" width="200" height="190">
+		 <img src="mari.png" width="200" height="190">
 	</div>
  	
 
