--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<title>video de fondo</title>
   		<meta charset="UTF-8">
  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="materialize.min.css">
 		<link rel="stylesheet" href="styles.css">
+		<script src="materialize.min.js"></script>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
