--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
   	<h2>TE AMO</h2>
 	<h3>esto solo acaba de empezar mi vida</h3>
 	</video>
+		 <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="guillermo.png"></a>
+    <a class="carousel-item" href="#two!"><img src="mariola.png"></a>
+    <a class="carousel-item" href="#three!"><img src="ana.png"></a>
+    <a class="carousel-item" href="#four!"><img src="mari.png"></a>
+    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+  </div>
 		 <img src="guillermo.png" width="200" height="190">
 		 <img src="ana.png" width="200" height="190">
 		 <img src="mariola.png" width="200" height="190">
@@ -49,6 +56,7 @@
  	
 
 </header>
+	
 <section class="info">
 	<img src="foto3.png">
 	<img src="foto1.jpg">
