--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="materialize.min.css">
 		<link rel="stylesheet" href="styles.css">
 		<script src="materialize.min.js"></script>
+		<script src="carousel.js"></script>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
