--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="materialize.min.css">
 		<link rel="stylesheet" href="styles.css">
 		<script src="materialize.min.js"></script>
-		<script src="carousel.js"></script>
+		<script src="main.js"></script>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
@@ -42,12 +42,14 @@
   	<h2>TE AMO</h2>
 	<h3>esto solo acaba de empezar mi vida</h3>
 	</video>
-		 <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="guillermo.png"></a>
-    <a class="carousel-item" href="#two!"><img src="mariola.png"></a>
-    <a class="carousel-item" href="#three!"><img src="ana.png"></a>
-    <a class="carousel-item" href="#four!"><img src="mari.png"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+   <div class="carousel center-align">
+                    <div class="carousel-item">
+                      
+                        <img src="guillermo.png" alt="">
+                    </div>
+                <div class="carousel-item">
+               
+                        <img src="ana.png" alt="">
   </div>
 		 <img src="guillermo.png" width="200" height="190">
 		 <img src="ana.png" width="200" height="190">
