--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				</nav>
 			</div>
 		</div>
+	</div>
 	<audio src="micancion.mp3" autoplay="autoplay" loop="loop"></audio>
 	<div class="caja-video"> 
   	<video muted autoplay loop poster="Canteras_romanas3.jpg">
