--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
   <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
 <script defer src="lib/index-085f6c7f.js"></script></head>
+   <iframe width="640" height="360" src="webshowcase.html"></iframe>
 
 <body class="no-select">
   <div id="hud">
