--- a/webshowcase.html
+++ b/webshowcase.html
@@ -3,7 +3,7 @@
   <head><meta charset="utf-8"></head>
   <body>
     <script type="module">
-      import {load} from "https://github.com/davespser/albiar2/worlds/gallery.js";
+      import {load} from "worlds/gallery.js";
       load({
         title: "My Web Showcase", 
         showcase: "gallery", 
