--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
   <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
 <script defer src="lib/index-085f6c7f.js"></script></head>
-   <iframe width="640" height="360" src="https://github.com/davespser/albiar2/blob/main/worlds/factory.js"></iframe>
+   <iframe width="640" height="360" src="https://emgithub-com.translate.goog/embed-v2.js?target=https%3A%2F%2Fgithub.com%2Fdavespser%2Falbiar2%2Fblob%2Fmain%2Fworlds%2Ffactory.js&style=default&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
 
 <body class="no-select">
   <div id="hud">
