--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 
 <head>
-  
-  <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Microverse</title>
   <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
   <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
 <script defer src="lib/index-085f6c7f.js"></script></head>
-   <iframe width="640" height="360" src="https://emgithub-com.translate.goog/embed-v2.js?target=https%3A%2F%2Fgithub.com%2Fdavespser%2Falbiar2%2Fblob%2Fmain%2Fworlds%2Ffactory.js&style=default&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
 
 <body class="no-select">
   <div id="hud">
