--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <script defer src="lib/index-5649cc7e.js"></script></head>
 
 <body class="no-select">
+  <div id="loader">
+  <div class="loader-section" >
+     <span class="loader"></span>
+  </div>
   <div id="hud">
     <div class="container">
       <div class="controllers" style="border:1px solid red">
