--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head><meta charset="utf-8"></head>
-  <body>
-    <script type="module">
-      import {load} from "https://github.com/davespser/albiar2/blob/main/worlds/default.js";
-      load({
-        title: "My Web Showcase", 
-        showcase: "gallery", 
-        cards: [
-          // each item in cards array has a 'place' to specify the location in the art gallery
-          // 'type' is either "image", "pdf", or "video"
-          // 'path' specifies the location of the asset, either as full URL or as path relative to this html file
-          {place: 1, type: "image", path: "https://github.com/davespser/albiar2/foto1.jpg"},
-          {place: 2, type: "pdf", path: "https://croquet.io/webshowcase/site/CompanyDeck.pdf"},
-          {place: 3, type: "video", path: "https://croquet.io/webshowcase/site/CustomerVideo.mp4", muted: false},
-          {place: 4, type: "image", path: "https://croquet.io/webshowcase/site/CustomerLogos.png"},
-          {place: 5, type: "image", path: "https://croquet.io/webshowcase/site/CallToAction.png", urlLink: "https://croquet.io/webshowcase"},
-          {place: 6, type: "image", path: "https://croquet.io/webshowcase/site/sunset-tree-on-hill-1.jpg"},
-          {place: 7, type: "image", path: "https://croquet.io/webshowcase/site/sunset-tree-on-hill-2.jpg"},
-          {place: 8, type: "image", path: "https://croquet.io/webshowcase/site/zen-garden-1.jpg"},
-          {place: 9, type: "image", path: "https://croquet.io/webshowcase/site/zen-garden-2.jpg"},
-        ],
-        privacy: "invite", // "public" or "invite"
-        voiceChat: true,
-        appId: "com.gmail.davespser.webshowcase",
-        apiKey: "17D09BKn2OeijnC6CML0qeHhfGrxfsrPbEqef55qL",
-      });
-    </script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Microverse</title>
+  <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
+  <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
+<script defer src="lib/index-24e12491.js"></script></head>
+
+<body class="no-select">
+  <div id="hud">
+    <div class="container">
+      <div class="controllers" style="border:1px solid red">
+        <div id="homeBtn" class="btn btn-ui">
+          <i class="fas fa-solid fa-house-user no-pointer-events"></i>
+        </div>
+        <div id="editModeBtn" mobile="false" class="btn">
+          <i class="fas fa-solid fa-angle-up no-pointer-events"></i>
+        </div>
+        <div id="worldMenuBtn" class="btn btn-ui">
+          <i class="fa fa-solid fa-bars no-pointer-events"></i>
+        </div>
+        <input id="ghostSlider" type="range" min="0" max="100">
+      </div>
+    </div>
+  </div>
+  <div id="shell-hud">
+    <div id="fullscreenBtn" class="btn btn-ui">
+      <i class="fas fa-solid fa-expand"></i>
+    </div>
+    <div id="joystick">
+        <div id="trackingknob"></div>
+        <div id="knob"></div>
+        <div id="joystick-arrows">
+          <div id="joystick-arrow-n" class="joystick-arrow"></div>
+          <div id="joystick-arrow-e" class="joystick-arrow"></div>
+          <div id="joystick-arrow-w" class="joystick-arrow"></div>
+          <div id="joystick-arrow-s" class="joystick-arrow"></div>
+        </div>
+    </div>
+  </div>
+</body>
 </html>
