--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="fullscreenBtn" class="btn btn-ui">
       <i class="fas fa-solid fa-expand"></i>
     </div>
-    <div id="joystick">
+    <div id="joystick"><img ".assets/images/joystick.png"></div>
         <div id="trackingknob"></div>
         <div id="knob"></div>
         <div id="joystick-arrows">
