--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Microverse</title>
   <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
   <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
-  rel="icon" type="image/ico" href="favicon.ico"/>
-<link rel="icon" type="image/ico" href="favicon.ico">
+  <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
 <script defer src="lib/index-3bf63c4f.js"></script></head>
 
 <body class="no-select">
