--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+uno<!DOCTYPE html>
 <html>
 
 <head>
@@ -31,7 +31,7 @@
     <div id="fullscreenBtn" class="btn btn-ui">
       <i class="fas fa-solid fa-expand"></i>
     </div>
-    <div id="joystick"><img ".assets/images/joystick.png"></div>
+    <div id="joystick"></div>
         <div id="trackingknob"></div>
         <div id="knob"></div>
         <div id="joystick-arrows">
