--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ uno<!DOCTYPE html>
     <div id="fullscreenBtn" class="btn btn-ui">
       <i class="fas fa-solid fa-expand"></i>
     </div>
-    <div id="joystick"></div>
+    <div id="joystick">
         <div id="trackingknob"></div>
         <div id="knob"></div>
         <div id="joystick-arrows">
