--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-uno<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,8 +7,7 @@ uno<!DOCTYPE html>
   <title>Microverse</title>
   <link id="microverse-css" rel="stylesheet" href="./assets/css/microverse.css" />
   <link href="./assets/fonts/css/all.min.css" rel="stylesheet">
-  <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
-<script defer src="lib/index-3bf63c4f.js"></script></head>
+<script defer src="lib/index-989b49ef.js"></script></head>
 
 <body class="no-select">
   <div id="hud">
